# weather-app

./: README.md  main.py  pyproject.toml
src/weather_app/: __init__.py  client.py
